--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="navbar navbar-default navbar-fixed-top">
           <header>
             <div class="row">
-              <div class="col-md-6 col-xs-8 col-xs-offset-2 col-md-offset-0">
+              <div class="col-md-6 col-xs-6 col-xs-offset-2 col-md-offset-0">
                 <h1>Walt Disney World Timeline</h1>
               </div>
-              <div class="col-md-6 col-xs-8 col-xs-offset-2 col-md-offset-0">
+              <div class="col-md-6 col-xs-6 col-xs-offset-2 col-md-offset-0">
                 <h1>2000 - 2016</h1>
               </div>
             </div>
@@ -27,26 +27,30 @@
 
           <nav>
             <div class="row">
-              <div class="col-md-2 col-xs-4">
                 <button id="mkButton" class="mk">Magic Kingdom</button>
               </div>
-              <div class="col-md-2 col-xs-4">
                 <button id="epButton" class="ep">Epcot</button>
               </div>
-              <div class="col-md-2 col-xs-4">
                 <button id="dhsButton" class="dhs">Disney's Hollywood Studios</button>
               </div>
-              <div class="col-md-2 col-xs-4">
                 <button id="dakButton" class="dak">Disney's Animal Kingdom</button>
               </div>
-              <div class="col-md-2 col-xs-4">
                 <button id="resortButton" class="resort">Resorts & More</button>
               </div>
-              <div class="col-md-2 col-xs-4">
                 <button id="rDButton" class="rD">runDisney Events</button>
               </div>
             </div>
           </nav>
+
+          <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2 instructions">
+            <span>
+              Click on the buttons above to filter by category.
+            </span>
+            <span>
+              Click on any event for more information.
+            </span>
+          </div>
+
         </div>
 
         <ul class="timeline">
