Small HTML Changes
Small changes to HTML

--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
 
           <nav>
             <div class="row">
+              <div class="col-md-2 col-sm-2 col-xs-4">
                 <button id="mkButton" class="mk">Magic Kingdom</button>
               </div>
+              <div class="col-md-2 col-sm-2 col-xs-4">
                 <button id="epButton" class="ep">Epcot</button>
               </div>
+              <div class="col-md-2 col-sm-2 col-xs-4">
                 <button id="dhsButton" class="dhs">Disney's Hollywood Studios</button>
               </div>
+              <div class="col-md-2 col-sm-2 col-xs-4">
                 <button id="dakButton" class="dak">Disney's Animal Kingdom</button>
               </div>
+              <div class="col-md-2 col-sm-2 col-xs-4">
                 <button id="resortButton" class="resort">Resorts & More</button>
               </div>
+              <div class="col-md-2 col-sm-2 col-xs-4">
                 <button id="rDButton" class="rD">runDisney Events</button>
               </div>
             </div>
