Changes to "Reset Timeline"
Fixed some issues with "Reset Timeline" (buttons and paragraphic
visibility did not reset)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2 instructions">
             <span>
-              Click on the buttons above to filter by category.
+              Click on the buttons above to filter by category and toggle categories.
             </span>
             <span>
               Click on any event for more information.
@@ -1597,6 +1597,7 @@
     </div>
 
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
   </body>
   
