Various Minor Changes to Styles & Interactivity
Made some small changes to styles, including mobile styles.
Changed some interactive functions, including creating a new showAll()
function and changing what happens when no items are displayed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <header>
             <div class="row">
               <div class="col-md-6 col-xs-6 col-xs-offset-3 col-md-offset-0">
-                <h1>Walt Disney World Timeline</h1>
+                <h1>20 Years of Walt Disney World</h1>
               </div>
               <div class="col-md-6 col-xs-6 col-xs-offset-3 col-md-offset-0">
                 <h1>1997 - 2016</h1>
@@ -101,7 +101,7 @@
       
           <li>
             <div class="timeline-badge dak">
-              <i class="resort-dak"></i>
+              <i class="dak-img"></i>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -397,7 +397,7 @@
               </div>
               <div class="timeline-body">
                 <p>
-                  The after parade, which was renamed as the Disney Dreams Come True Parade in 2006 and again as Celebrate A Dream Come True in 2009, ended its final run on January 4th, 2014.
+                  This afternoon parade, which was renamed as the Disney Dreams Come True Parade in 2006 and again as Celebrate A Dream Come True in 2009, ended its final run on January 4th, 2014.
                 </p>
               </div>
             </div>
