Magic 8 Ball - Grid Edit
Small changes to grid (added bootstrap grid element)

--- a/other/magic_eight/index.html
+++ b/other/magic_eight/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="container">
-    <div class="content text-center">
+    <div class="content col-xs-12 text-center">
       <nav class="navbar navbar-default">
         <button class="btn btn-default navbar-btn" id="default">Default Colors</button>
         <button class="btn btn-default navbar-btn" id="red">Red/Blue</button>
