WDW Timeline - Added Info: 1987-1990
Added events to WDW from 1987 through 1990

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1>Walt Disney World Timeline</h1>
               </div>
               <div class="col-md-6 col-xs-10 col-xs-offset-1 col-md-offset-0">
-                <h1>1991 - 2016</h1>
+                <h1>1987 - 2016</h1>
               </div>
             </div>
           </header>
@@ -60,6 +60,234 @@
         </div>
 
         <ul class="timeline">
+
+          <li>
+            <div class="timeline-badge mk">
+              <i class="mk-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>December 15, 1987:</time>
+                  Magic Journeys Opens at Magic Kingdom
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This 3D film, which had previously been located at Epcot (1982-1986), looked at the world through the eyes of a child.  It was directed by Murray Lerner and featured a song composed by Robert and Richard Sherman. The show closed in December 1993.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 3, 1988:</time>
+                  Norway Pavilion Opens at Epcot
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This World Showcase pavilion, situated between the Mexican and Chinese pavilions, is designed to look like a Norwegian village. The village includes a detailed Stave church, Restaurant Akershus (the exterior of which resembles its namesake in Oslo), and a series of interconnected shops decorated with large wooden trolls, which sell assorted Norwegian goods, including clothing, candy, and statuettes of Norse gods and trolls.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge resort">
+              <i class="resort-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 28, 1988:</time>
+                  Disney's Grand Floridian Resort & Spa Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This Victorian themed luxury hotel and spa is located in the Magic Kingdom area, and can be easily accessed from the park by monorail or boat. Designed to be Walt Disney World's signature resort, the hotel's main building features a five story lobby, a replica cage elevator, stained glass domes, and Italian marble floors with inlays of various Disney characters. The Grand Floridian Resort is also home to Victoria & Albert's, an AAA Five Diamond Award-winning restaurant with a menu created nightly and an award-winning wine cellar.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>July 5, 1988:</time>
+                  Maelstrom Opens in the Norway Pavilion
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This log flume dark ride, located in the Norway pavilion in Epcot's World Showcase, took riders through scenes featuring audio-animatronic figures representing Norway's history and culture. The ride vehicles were patterned after longships and went forwards, backwards, and up a lift hill. The ride closed on October 5, 2014, to be replaced by an attraction based on the film <em>Frozen</em>.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge resort">
+              <i class="resort-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>October 1, 1988:</time>
+                  Disney's Caribbean Beach Resort Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Located in the Epcot resort area, this Caribbean-themed hotel contains six areas named after islands in the Caribbean: Martinique, Barbados, Jamaica, Aruba, Trinidad North, and Trinidad South. At the center of the resort is Barefoot Bay, a 45-acre lake whose shores feature beaches, hammocks, and other activities such as beach volleyball.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dhs">
+              <i class="dhs-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>May 1, 1989:</time>
+                  Disney-MGM Studios Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  The third theme park to open at Walt Disney World, Disney-MGM Studios is dedicated to the facets of show business, including film, television, music, and theatre. The park opened as part theme park and part production studio, with animated features such as  Mulan, Lilo & Stitch, and Brother Bear being produced there. Several sound stages were used for both Disney and outside projects. In the 2000's, these production facilities began to shut down, and eventually the park was no longer used for any filming or production. In January 2008, MGM branding was removed from the park, which was renamed Disney's Hollywood Studios. A major expansion was announced in 2015, with Toy Story Land and Star Wars Land being announced for the park.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge resort">
+              <i class="resort-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 1, 1989:</time>
+                  Disney's Typhoon Lagoon Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Disney's second water park, Typhoon Lagoon is themed to a typhoon that wreaked havoc upon a formerly pristine tropical paradise. The centerpiece of the park is "Miss Tilly," a shrimp boat impaled upon a mountain named "Mount Mayday" that erupts a 50-foot (15 m) geyser of water every half hour, right before the bells of the watch sound on Miss Tilly. The park operates year-round, with an annual closure for maintenance.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge mk">
+              <i class="mk-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 23, 1989:</time>
+                  Delta Dreamflight Opens at Magic Kingdom
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This attraction, located in Magic Kingdom's Tomorrowland, was sponsored by Delta Air Lines. Using a basic Omnimover ride system, Dreamflight was a pop-up book version of the history of flight using simplistic sets, some Audio-Animatronics and projection effects. The attraction closed on January 5, 1998 and was replaced by Buzz Lightyear's Space Ranger Spin.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dhs">
+              <i class="dhs-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>August 25, 1989:</time>
+                  Indiana Jones Epic Stunt Spectacular! Debuts
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This show, located in the Echo Lake section of Disney's Hollywood Studios, is based on many of the popular stunt scenes from the film <em>Raiders of the Lost Ark</em>. It is executively produced by George Lucas and directed by Jerry Rees, with stunt coordination by Glenn Randall. As part of the show, selected audience members 18 and older are invited to participate as extras in certain scenes.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>October 19, 1989:</time>
+                  Wonders of Life Pavilion Opens at Epcot
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This pavilion, which was centered around health and fitness, housed two major attractions (Cranium Command and Body Wars), as well as other entertainment and interactive attractions. Cranium Command, a theater show with audio-animatronic actors and a movie, explained the functions of the brain and its interaction with the human body. Body Wars was a motion simulator ride taking guests on a Fantastic Voyage-like trip through the bloodstream. The pavilion moved to seasonal operation beginning on January 4, 2004 and closed permanently on January 1, 2007. The building is now used for special events and festivals.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge resort">
+              <i class="resort-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>November 5, 1990:</time>
+                  Disney's Yacht Club Resort Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This Epcot-area resort, located near Crescent Lake, features a nautical theme. Guests at the resort can access Epcot (via the International Gateway) or Hollywood Studios by walking or by boat. Amenities at the resort include several restaurants, pools (including the popular Stormalong Bay), an arcade, a beach, and a health and fitness center.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge resort">
+              <i class="resort-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>November 19, 1990:</time>
+                  Disney's Beach Club Resort Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Located in the Crescent Lake area adjacent to Epcot, this resort is themed after seaside cottages found in Newport at the start of the 20th century. Boat transportation is available to Epcot and Hollywood Studios, and walking paths are also available for guests who choose not to use the boats. The resort features several restaurants and shares some amenities with the nearby Yacht Club, including one of the nation's largest sand bottom pools, Stormalong Bay.
+                </p>
+              </div>
+            </div>
+          </li>
 
           <li>
             <div class="timeline-badge dhs">
