WDW Timeline - Added Info 1981-1985
Added events for 1981-1985

--- a/index.html
+++ b/index.html
@@ -68,6 +68,82 @@
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4 class="timeline-title">
+                  <time>October 1, 1981:</time>
+                  Epcot Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Epcot, the second theme park to open at Walt Disney World, is dedicated to the celebration of human achievement, namely technological innovation and international culture. The park is divided into two sections: Future World, containing a variety of pavilions that explore innovative aspects and applications including technology and science, and World Showcase, an area reminiscent of a permanent world's fair and consisting of pavillions themed and dedicated to represent a specific country
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>December 15, 1987:</time>
+                  Journey into Imagination Opens at Epcot
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This attraction, created by imagineers Tony Baxter and Steve Kirk, featured Dreamfinder, a pilot who uses his vehicle to collect dreams and ideas to create all sorts of new things. He creates a figment of his imagination, a purple and yellow dragon named Figment. Dreamfinder and Figment imagine new ideas and use them to interact with the world around them. At the end, Dreamfinder tells Figment and the audience that Imagination is the key to unlocking the hidden wonders of the world. The attraction closed on October 10, 1998 and was replaced by another imagination-themed attraction, Journey into Your Imagination.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 9, 1984:</time>
+                  Laserphonic Fantasy Debuts
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This nighttime show featured lasers emitted from barges and from around the World Showcase lagoon. The show, which replaced A New World Fantasy, closed in 1988 and was replaced by similar shows, Illuminations and then Illuminations 25, before finally being replaced by IllumiNations: Reflections of Earth in 1999.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>September 7, 1984:</time>
+                  Morocco Pavilion Opens in Epcot's World Showcase
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  The Morocco Pavilion, the first expansion pavilion to be added to World Showcase, was designed to look like a Moroccan city with a realistic Minaret. It is the only pavilion in which the country's government aided in the design, as King Hassan II sent Moroccan artisans to design and create the many mosaics. Due to Islamic religious beliefs on the content of art, the mosaics contain no representations of people, and the pavilion's buildings do not light up during nighttime shows.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge mk">
+              <i class="mk-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
                   <time>December 15, 1987:</time>
                   Magic Journeys Opens at Magic Kingdom
                 </h4>
