WDW Timeline - Added 1976-1980
Added info for events from 1976 to 1980

--- a/index.html
+++ b/index.html
@@ -62,8 +62,65 @@
         <ul class="timeline">
 
           <li>
+            <div class="timeline-badge resort">
+              <i class="resort-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 20, 1976:</time>
+                  Disney's River Country Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Disney's first water park, River Country featured a rustic wilderness theming, complete with rocks and man-made boulders. The park featured five water slides, two pools, and two children's areas. The park never reopened after its regular end-of-season closure in November 2001, and on January 20, 2005, The Walt Disney Company announced that the park was permanently closed. The park has since been left to deteriorate.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
             <div class="timeline-badge mk">
               <i class="mk-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>June 11, 1977:</time>
+                  Main Street Electrical Parade Debuts
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This parade, which made its original debut at Disneyland in 1972 and opened at Walt Disney World five years later, featured floats and live performers covered in thousands of electronically controlled lights and a synchronized soundtrack triggered by radio control along key areas of the parade route. The parade has had several incarnations at Disney World, making its original run from 1977-1991, returning from 1999-2001, and making its most recent run from 2010 to 2016, when it closed to return to Disneyland.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge mk">
+              <i class="mk-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>November 15, 1980:</time>
+                  Big Thunder Mountain Railroad Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  A combinations of turns and drops takes riders through an abandoned mine town on this mine train roller coaster, located in Frontierland at Magic Kingdom. The rides has two tracks with slightly different ride experiences.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge ep">
+              <i class="ep-img"></i>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -74,7 +131,7 @@
               </div>
               <div class="timeline-body">
                 <p>
-                  Epcot, the second theme park to open at Walt Disney World, is dedicated to the celebration of human achievement, namely technological innovation and international culture. The park is divided into two sections: Future World, containing a variety of pavilions that explore innovative aspects and applications including technology and science, and World Showcase, an area reminiscent of a permanent world's fair and consisting of pavillions themed and dedicated to represent a specific country
+                  Epcot, the second theme park to open at Walt Disney World, is dedicated to the celebration of human achievement, namely technological innovation and international culture. The park is divided into two sections: Future World, containing a variety of pavilions that explore innovative aspects and applications including technology and science, and World Showcase, an area reminiscent of a permanent world's fair and consisting of pavillions themed and dedicated to represent a specific country.
                 </p>
               </div>
             </div>
