Magic 8 Ball - Minor Changes
Made minor changes to use of bootstrap grid

--- a/other/magic_eight/index.html
+++ b/other/magic_eight/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="container">
-    <div class="content col-xs-12 text-center">
+    <div class="content col-xs-12 col-md-12 text-center">
       <nav class="navbar navbar-default">
         <button class="btn btn-default navbar-btn" id="default">Default Colors</button>
         <button class="btn btn-default navbar-btn" id="red">Red/Blue</button>
@@ -22,7 +22,7 @@
         <button class="btn btn-default navbar-btn" id="white">White/Red</button>
       </nav>
       
-      <div class="changeable">
+      <div class="changeable col-md-12 col-xs-12">
         <h1>Ask A Question!</h1>
 
         <div class="eight-ball">
