--- a/other/magic_eight/index.html
+++ b/other/magic_eight/index.html
@@ -8,18 +8,30 @@
 
 <body>
   <div class="container">
-    <div class="content col-xs-12 col-md-12 text-center">
-      <nav class="navbar navbar-default">
-        <button class="btn btn-default navbar-btn" id="default">Default Colors</button>
-        <button class="btn btn-default navbar-btn" id="red">Red/Blue</button>
-        <button class="btn btn-default navbar-btn" id="yellow">Yellow/Red</button>
-        <button class="btn btn-default navbar-btn" id="green">Green/Black</button>
-        <button class="btn btn-default navbar-btn" id="blue">Blue/Brown</button>
-        <button class="btn btn-default navbar-btn" id="purple">Purple/Navy</button>
-        <button class="btn btn-default navbar-btn" id="pink">Pink/Green</button>
-        <button class="btn btn-default navbar-btn" id="beige">Beige/Green</button>
-        <button class="btn btn-default navbar-btn" id="brown">Brown/Blue</button>
-        <button class="btn btn-default navbar-btn" id="white">White/Red</button>
+    <div class="content col-xs-10 col-md-12 text-center">
+      <nav class="navbar col-xs-12 col-md-12 navbar-default">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a class="btn btn-default navbar-btn" id="default">Default Colors</a></li>
+            <li><a class="btn btn-default navbar-btn" id="red">Red/Blue</a></li>
+            <li><a class="btn btn-default navbar-btn" id="yellow">Yellow/Red</a></li>
+            <li><a class="btn btn-default navbar-btn" id="green">Green/Black</a></li>
+            <li><a class="btn btn-default navbar-btn" id="blue">Blue/Brown</a></li>
+            <li><a class="btn btn-default navbar-btn" id="purple">Purple/Navy</a></li>
+            <li><a class="btn btn-default navbar-btn" id="pink">Pink/Green</a></li>
+            <li><a class="btn btn-default navbar-btn" id="beige">Beige/Green</a></li>
+            <li><a class="btn btn-default navbar-btn" id="brown">Brown/Blue</a></li>
+            <li><a class="btn btn-default navbar-btn" id="white">White/Red</a></li>
+          </ul>
+        </div>
       </nav>
       
       <div class="changeable col-md-12 col-xs-12">
