Math-Based Fun: Sum Between Numbers
Created a function that finds the sum of all numbers between (and
including) two numbers inputted by the user.

--- a/other/math/index.html
+++ b/other/math/index.html
@@ -11,7 +11,7 @@
     
     <div class="container">
 
-      <div class="container">
+      <div class="container random">
 
         <h2>Random Number Generator</h2>
         <p>
@@ -25,19 +25,23 @@
         <button id="num-generator">Generate Random Number</button>
         <h4 id="random-num"></h4>
 
+      </div>
 
-        <!-- <form id="numbers">
-          <input id="start" autofocus placeholder="Enter Minimum Number">
-          <input id="end" autofocus placeholder="Enter Maximum Number">
-          <button id="number-btn">Generate Random Number</button>
-        </form> -->
+      <div class="container sum-btwn">
 
-        <!-- <div id="inputs">
-          <input id="start">
-          <input id="end">
-        </div>
-        <button id="random-num">Generate Random Number</button>
-        <h4></h4> -->
+        <h2>Sum Between Two Numbers</h2>
+        <h5>Use this to find the sum of all of the numbers between (and including) two numbers of your choice</h5>
+        <p>
+          <span>Enter First Value:</span>
+          <input id="val1" />
+        </p>
+        <p>
+          <span>Enter Second Value:</span>
+          <input id="val2" />
+        </p>
+        <button id="num-sum">Sum the Numbers Between</button>
+        <h4 id="sum-between"></h4>
+
       </div>
 
     </div>
