Math-Based Fun: Primes Above & Below
Added a function that takes an inputted number and returns the prime
numbers immediately above and below the inputted number.

--- a/other/math/index.html
+++ b/other/math/index.html
@@ -44,6 +44,20 @@
 
       </div>
 
+      <div class="container primes">
+
+        <h2>Find Prime Number Above and Below</h2>
+        <h5>Enter a number to find out the prime numbers above and below your number!</h5>
+        <p>
+          <span>Enter Value:</span>
+          <input id="prime1" />
+        </p>
+        <button id="prime-find">Find Primes</button>
+        <h4 id="prime-low"></h4>
+        <h4 id="prime-high"></h4>
+
+      </div>
+
     </div>
 
     <script src="js/jquery-3.1.1.min.js"></script>
