Math-Based Fun: Style Changes
Added some basic styles to math-based fun page.

--- a/other/math/index.html
+++ b/other/math/index.html
@@ -11,6 +11,8 @@
     
     <div class="container">
 
+      <h1>Assorted Math-Based Fun</h1>
+
       <div class="container random">
 
         <h2>Random Number Generator</h2>
