Math-Based Fun: Find Divisors
Added a section to fin all divisors for a chosen number.

--- a/other/math/index.html
+++ b/other/math/index.html
@@ -60,6 +60,19 @@
 
       </div>
 
+      <div class="container divisors">
+
+        <h2>Find All Divisors!</h2>
+        <h5>Enter a number to find that number's divisors.</h5>
+        <p>
+          <span>Enter Number:</span>
+          <input id="divisor1" />
+        </p>
+        <button id="divisors-all">Find All Divisors</button>
+        <h4 id="divisors"></h4>
+
+      </div>
+
     </div>
 
     <script src="js/jquery-3.1.1.min.js"></script>
