--- a/other/recipe/index.html
+++ b/other/recipe/index.html
@@ -16,6 +16,7 @@
 
 				<div class="images">
 					<img id="coldbrew" src="img/coldbrew.jpg" alt="Cold Brew Coffee Concentrate" />
+					<img id="granola" src="img/granola.jpg" alt="Homemade Nut and Seed Granola" />
 				</div>
 
 				<div class="recipe">
