Math-Based Fun: Multiple Choice Answers
Created a function to randomly generate (and display) answers to an inputted number of multiple choice questions.
Useful for teachers who give multiple choice tests (and students who don't want to study and don't care about their grades)

--- a/other/math/index.html
+++ b/other/math/index.html
@@ -73,6 +73,22 @@
 
       </div>
 
+      <div class="container mc-choices">
+
+        <h2>Multiple Choice Answer Selector!</h2>
+        <h5>Looking for answer choices for your multiple choice questions? Look no further! Input the number of questions you have and how many choices each question has (maximum 8), and you'll get a random pattern of answers.</h5>
+        <p>
+          <span>Number of Questions:</span>
+          <input id="mc-quests" />
+          <span>Number of Answer Options:</span>
+          <input id="mc-num-ans" />
+        </p>
+        <button id="mc-select">Get Answer Choices</button>
+        <ol id="mc-answers">
+        </ol>
+
+      </div>      
+
     </div>
 
     <script src="js/jquery-3.1.1.min.js"></script>
