--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WDW Timeline: 1971 - 2016</title>
+    <title>WDW Timeline: 1971 - 2017</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -18,7 +18,7 @@
             <h1>Walt Disney World Timeline</h1>
           </div>
           <div class="col-md-2 col-xs-4 col-xs-offset-1 col-md-offset-0">
-            <h1>1971 - 2016</h1>
+            <h1>1971 - 2017</h1>
           </div>
 
           <nav>
@@ -1189,7 +1189,7 @@
               </div>
               <div class="timeline-body">
                 <p>
-                  This energy-centered attraction, which replaced the opening day attraction "Universe of Energy," stars Ellen DeGeneres, Bill Nye "The Science Guy", Alex Trebek, Johnny Gilbert, and Jamie Lee Curtis. It takes a light-hearted look at various energy resources, how energy is produced, the history of energy production, and the search for new energy resources. The total attraction experience lasts 45 minutes, and features three films and a primeval diorama.
+                  This energy-centered attraction, which replaced the opening day attraction "Universe of Energy," stars Ellen DeGeneres, Bill Nye "The Science Guy", Alex Trebek, Johnny Gilbert, and Jamie Lee Curtis. It takes a light-hearted look at various energy resources, how energy is produced, the history of energy production, and the search for new energy resources. The total attraction experience lasts 45 minutes, and features three films and a primeval diorama. The attraction closes on August 13, 2017 to make room for a <em>Guardians of the Galaxy</em> themed attraction.
                 </p>
               </div>
             </div>
@@ -2938,6 +2938,101 @@
               <div class="timeline-body">
                 <p>
                   This inaugural race, represented by Chef Remy and added as part of a number of changes to the Wine and Dine Half Marathon Weekend, runs through Epcot and the Epcot resort area. In addition to the 10K, a challenge was added to the weekend, giving participants the opportunity to earn the Lumiere's Two-Course Challenge medal for completing both the 10K and Half Marathon (the half marathon, which had been held on Saturday night in previous years, was moved to Sunday morning).
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dak">
+              <i class="dak-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>February 17, 2017:</time>
+                  Rivers of Light Debuts at Animal Kingdom
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  After several delays, this new nighttime show debuts at Animal Kingdom. Rivers of Light features water screens, fountains, lasers, music, boats, floats, and fire to show the colorful world of animals and nature.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dhs">
+              <i class="dhs-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>May 26, 2017:</time>
+                  The Music of Pixar Live! A Symphony of Characters
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Presented nightly, this show featured scenes from popular Pixar films accompanied by orchestral music and highlighted some of the most popular Pixar tunes. The show's limited run ended on August 27, 2017.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dak">
+              <i class="dak-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>May 27, 2017:</time>
+                  Pandora – The World of Avatar Opens
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This new area at Animal Kingdom, inspired by the film <em>Avatar</em>, features two attractions: Avatar Flight of Passage is an AR simulator that allows guests to fly with mountain banshees, and Na'vi River Journey is a family boat ride showcasing the native fauna and flora of Pandora. There is a themed quick service restaurant located in the area, and a food and beverage stand, Pongu Pongu.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dhs">
+              <i class="dhs-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>August 13, 2017:</time>
+                  The Great Movie Ride Closes
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  This ride-through movie attraction, which opened with Disney-MGM Studios in 1989, used Audio-Animatronics, live actors, special effects, and static sets to recreate classic movie scenes. The attraction, which was housed in a building meant to resemble Graumann's Chinese Theater, will be replaced by a Mickey Mouse themed ride.
+                </p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge dhs">
+              <i class="dhs-img"></i>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">
+                  <time>September 27, 2017:</time>
+                  BaseLine Tap House Opens at Hollywood Studios
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Located in the new Grand Avenue area, this pub specializes in beers and wine from California. Snacks served include Bavarian pretzel and California cheeses.
                 </p>
               </div>
             </div>
