--- a/index.html
+++ b/index.html
@@ -559,394 +559,6 @@
               </div>
             </div>
           </li>
-
-          <li>
-            <div class="timeline-badge mk">
-              <i class="mk-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>November 15, 1980:</time>
-                  Big Thunder Mountain Railroad Opens
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  A combinations of turns and drops takes riders through an
-                  abandoned mine town on this mine train roller coaster, located
-                  in Frontierland at Magic Kingdom. The rides has two tracks
-                  with slightly different ride experiences.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>October 1, 1981:</time>
-                  Epcot Opens
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  Epcot, the second theme park to open at Walt Disney World, is
-                  dedicated to the celebration of human achievement, namely
-                  technological innovation and international culture. The park
-                  is divided into two sections: Future World, containing a
-                  variety of pavilions that explore innovative aspects and
-                  applications including technology and science, and World
-                  Showcase, an area reminiscent of a permanent world's fair and
-                  consisting of pavillions themed and dedicated to represent a
-                  specific country.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>December 15, 1987:</time>
-                  Journey into Imagination Opens at Epcot
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This attraction, created by imagineers Tony Baxter and Steve
-                  Kirk, featured Dreamfinder, a pilot who uses his vehicle to
-                  collect dreams and ideas to create all sorts of new things. He
-                  creates a figment of his imagination, a purple and yellow
-                  dragon named Figment. Dreamfinder and Figment imagine new
-                  ideas and use them to interact with the world around them. At
-                  the end, Dreamfinder tells Figment and the audience that
-                  Imagination is the key to unlocking the hidden wonders of the
-                  world. The attraction closed on October 10, 1998 and was
-                  replaced by another imagination-themed attraction, Journey
-                  into Your Imagination.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>June 9, 1984:</time>
-                  Laserphonic Fantasy Debuts
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This nighttime show featured lasers emitted from barges and
-                  from around the World Showcase lagoon. The show, which
-                  replaced A New World Fantasy, closed in 1988 and was replaced
-                  by similar shows, Illuminations and then Illuminations 25,
-                  before finally being replaced by IllumiNations: Reflections of
-                  Earth in 1999.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>September 7, 1984:</time>
-                  Morocco Pavilion Opens in Epcot's World Showcase
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  The Morocco Pavilion, the first expansion pavilion to be added
-                  to World Showcase, was designed to look like a Moroccan city
-                  with a realistic Minaret. It is the only pavilion in which the
-                  country's government aided in the design, as King Hassan II
-                  sent Moroccan artisans to design and create the many mosaics.
-                  Due to Islamic religious beliefs on the content of art, the
-                  mosaics contain no representations of people, and the
-                  pavilion's buildings do not light up during nighttime shows.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge mk">
-              <i class="mk-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>December 15, 1987:</time>
-                  Magic Journeys Opens at Magic Kingdom
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This 3D film, which had previously been located at Epcot
-                  (1982-1986), looked at the world through the eyes of a child.
-                  It was directed by Murray Lerner and featured a song composed
-                  by Robert and Richard Sherman. The show closed in December
-                  1993.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>June 3, 1988:</time>
-                  Norway Pavilion Opens at Epcot
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This World Showcase pavilion, situated between the Mexican and
-                  Chinese pavilions, is designed to look like a Norwegian
-                  village. The village includes a detailed Stave church,
-                  Restaurant Akershus (the exterior of which resembles its
-                  namesake in Oslo), and a series of interconnected shops
-                  decorated with large wooden trolls, which sell assorted
-                  Norwegian goods, including clothing, candy, and statuettes of
-                  Norse gods and trolls.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge resort">
-              <i class="resort-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>June 28, 1988:</time>
-                  Disney's Grand Floridian Resort & Spa Opens
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This Victorian themed luxury hotel and spa is located in the
-                  Magic Kingdom area, and can be easily accessed from the park
-                  by monorail or boat. Designed to be Walt Disney World's
-                  signature resort, the hotel's main building features a five
-                  story lobby, a replica cage elevator, stained glass domes, and
-                  Italian marble floors with inlays of various Disney
-                  characters. The Grand Floridian Resort is also home to
-                  Victoria & Albert's, an AAA Five Diamond Award-winning
-                  restaurant with a menu created nightly and an award-winning
-                  wine cellar.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>July 5, 1988:</time>
-                  Maelstrom Opens in the Norway Pavilion
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This log flume dark ride, located in the Norway pavilion in
-                  Epcot's World Showcase, took riders through scenes featuring
-                  audio-animatronic figures representing Norway's history and
-                  culture. The ride vehicles were patterned after longships and
-                  went forwards, backwards, and up a lift hill. The ride closed
-                  on October 5, 2014, to be replaced by an attraction based on
-                  the film <em>Frozen</em>.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge resort">
-              <i class="resort-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>October 1, 1988:</time>
-                  Disney's Caribbean Beach Resort Opens
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  Located in the Epcot resort area, this Caribbean-themed hotel
-                  contains six areas named after islands in the Caribbean:
-                  Martinique, Barbados, Jamaica, Aruba, Trinidad North, and
-                  Trinidad South. At the center of the resort is Barefoot Bay, a
-                  45-acre lake whose shores feature beaches, hammocks, and other
-                  activities such as beach volleyball.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge dhs">
-              <i class="dhs-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>May 1, 1989:</time>
-                  Disney-MGM Studios Opens
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  The third theme park to open at Walt Disney World, Disney-MGM
-                  Studios is dedicated to the facets of show business, including
-                  film, television, music, and theatre. The park opened as part
-                  theme park and part production studio, with animated features
-                  such as Mulan, Lilo & Stitch, and Brother Bear being produced
-                  there. Several sound stages were used for both Disney and
-                  outside projects. In the 2000's, these production facilities
-                  began to shut down, and eventually the park was no longer used
-                  for any filming or production. In January 2008, MGM branding
-                  was removed from the park, which was renamed Disney's
-                  Hollywood Studios. A major expansion was announced in 2015,
-                  with Toy Story Land and Star Wars Land being announced for the
-                  park.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge resort">
-              <i class="resort-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>June 1, 1989:</time>
-                  Disney's Typhoon Lagoon Opens
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  Disney's second water park, Typhoon Lagoon is themed to a
-                  typhoon that wreaked havoc upon a formerly pristine tropical
-                  paradise. The centerpiece of the park is "Miss Tilly," a
-                  shrimp boat impaled upon a mountain named "Mount Mayday" that
-                  erupts a 50-foot (15 m) geyser of water every half hour, right
-                  before the bells of the watch sound on Miss Tilly. The park
-                  operates year-round, with an annual closure for maintenance.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge mk">
-              <i class="mk-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>June 23, 1989:</time>
-                  Delta Dreamflight Opens at Magic Kingdom
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This attraction, located in Magic Kingdom's Tomorrowland, was
-                  sponsored by Delta Air Lines. Using a basic Omnimover ride
-                  system, Dreamflight was a pop-up book version of the history
-                  of flight using simplistic sets, some Audio-Animatronics and
-                  projection effects. The attraction closed on January 5, 1998
-                  and was replaced by Buzz Lightyear's Space Ranger Spin.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge dhs">
-              <i class="dhs-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>August 25, 1989:</time>
-                  Indiana Jones Epic Stunt Spectacular! Debuts
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This show, located in the Echo Lake section of Disney's
-                  Hollywood Studios, is based on many of the popular stunt
-                  scenes from the film <em>Raiders of the Lost Ark</em>. It is
-                  executively produced by George Lucas and directed by Jerry
-                  Rees, with stunt coordination by Glenn Randall. As part of the
-                  show, selected audience members 18 and older are invited to
-                  participate as extras in certain scenes.
-                </p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="timeline-badge ep">
-              <i class="ep-img"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">
-                  <time>October 19, 1989:</time>
-                  Wonders of Life Pavilion Opens at Epcot
-                </h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  This pavilion, which was centered around health and fitness,
-                  housed two major attractions (Cranium Command and Body Wars),
-                  as well as other entertainment and interactive attractions.
-                  Cranium Command, a theater show with audio-animatronic actors
-                  and a movie, explained the functions of the brain and its
-                  interaction with the human body. Body Wars was a motion
-                  simulator ride taking guests on a Fantastic Voyage-like trip
-                  through the bloodstream. The pavilion moved to seasonal
-                  operation beginning on January 4, 2004 and closed permanently
-                  on January 1, 2007. The building is now used for special
-                  events and festivals.
-                </p>
-              </div>
-            </div>
-          </li>
         </ul>
 
         <footer class="navbar navbar-default navbar-fixed-bottom">
@@ -964,6 +576,7 @@
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="timeline/1980.js"></script>
     <script src="timeline/1990.js"></script>
     <script src="timeline/2000.js"></script>
     <script src="timeline/2010.js"></script>
