fix missing variables

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="timeline/1970.js"></script>
-    <!-- <script src="timeline/1980.js"></script>
+    <script src="timeline/1980.js"></script>
     <script src="timeline/1990.js"></script>
     <script src="timeline/2000.js"></script>
-    <script src="timeline/2010.js"></script> -->
+    <script src="timeline/2010.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
